# web-scraper

./: .env.example  .gitignore  README.md  TODO.md  contxt.rb  pyproject.toml  requirements.txt  setup.py  web_scraper.py  www.youtube.com_watch.md
config/: default.yaml
contxt/: __init__.py  cli.py  config.py  formatter.py  interactive.py  outputs.py  scraper.py  utils.py  youtube_handler.py
contxt/core/: config.py  rate_limiter.py
contxt/formatters/: __init__.py  base_formatter.py  html_formatter.py  markdown_formatter.py  xml_formatter.py  youtube_formatter.py
contxt/outputs/: __init__.py
contxt/processors/: image.py  text.py
contxt/sources/: base.py
contxt/sources/youtube/: __init__.py  channel.py  playlist.py
contxt/utils/: browser.py
examples/: basic_web_scraping.py  youtube_playlist.py
webseed/: __init__.py  cli.py
webseed/outputs/: base.py  markdown.py  tagged.py
webseed/processors/: __init__.py  base.py
webseed/sources/web/: extractor.py
webseed/sources/youtube/: cache.py  source.py  video.py
webseed/utils/: http.py  logging.py
